# EECE5552

./: .gitignore  README.md  tutorial1.ipynb
MPC_Gait/: MUJOCO_LOG.TXT  anymal_simplified.xml  checkURDF.py  config.py  create_simple_quadruped.py  dynamics.py  gait_generator.py  main.py  mpc.py  mpc_controller.py  mpc_mujoco.py  simulation.py  utils.py
install/: local_setup.sh  setup.sh
install/champ/include/champ/: LICENSE  README.md
install/champ/share/champ/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_base/lib/champ_base/: quadruped_controller_node
install/champ_base/share/champ_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_config/share/champ_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_msgs/share/champ_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/spot_bringup/share/spot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spot_description/share/spot_description/: local_setup.dsv  (+7 more)
log/: latest_build
src/spot_gazebo/: README.md
src/spot_gazebo/spot_bringup/: package.xml  setup.py
src/spot_gazebo/spot_bringup/config/: spot_bridge.yaml
src/spot_gazebo/spot_bringup/launch/: spot.gz.launch.py
src/spot_gazebo/spot_bringup/resource/: spot_bringup
src/spot_gazebo/spot_description/: package.xml
src/spot_gazebo/spot_gz/: CMakeLists.txt  package.xml
(+274 files in other folders)
