<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the spot_gz project</description>
  <maintainer email="luis.cruz@robtech.com">Luis Cruz</maintainer>
  <license>Apache 2.0</license>
  <author>Luis Cruz</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>spot_gz</depend>
  <depend>spot_description</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

